--- a/ps5/ps5.css
+++ b/ps5/ps5.css
@@ -288,7 +288,7 @@
     left: 330px;
     height: 213px;
     width: 391px;
-    background: url(touchpad.png);
+    background: url(touchpad3.png);
     background-repeat: no-repeat;
     -webkit-animation: none
 }
