--- a/ps5/ps5.css
+++ b/ps5/ps5.css
@@ -290,7 +290,7 @@
     width: 850px;
     background: url(touchpad2.png), url(touchpad3.png);
     background-repeat: no-repeat;
-    -webkit-animation: none
+    -webkit-animation: none;
 }
 
 @keyframes rotation_hue {
