--- a/ps5/ps5.css
+++ b/ps5/ps5.css
@@ -298,13 +298,13 @@
     100% {
         filter: saturate(1), saturate(1);
         filter: brightness(.35), brightness(1);
-        transform: hue-rotate(359deg), hue-rotate(0);
+        transform: hue-rotate(359deg), hue-rotate(0deg);
     }
 
     50% {
         filter: saturate(50%), saturate(1);
         filter: brightness(1.6), brightness(1);
-        transform: hue-rotate(0deg), hue-rotate(0);
+        transform: hue-rotate(0deg), hue-rotate(0deg);
     }
 }
 
