--- a/ps5/ps5.css
+++ b/ps5/ps5.css
@@ -292,19 +292,18 @@
     background-repeat: no-repeat;
 }
 
-@keyframes rotation_hue {
-
+@-webkit-keyframes rotation_hue {
     0%,
     100% {
-        filter: saturate(1);
-        filter: brightness(.35);
-        transform: hue-rotate(359deg);
+	/*filter: saturate(1);*/
+    	filter: brightness(.35) brightness(1);
+        /*transform: hue-rotate(359deg);*/
     }
 
     50% {
-        filter: saturate(50%);
-        filter: brightness(1.6);
-        transform: hue-rotate(0deg);
+    	/*filter: saturate(50%);*/
+    	filter: brightness(1.6) brightness(1);
+        /*transform: hue-rotate(0deg);*/
     }
 }
 
