--- a/ps5/ps5.css
+++ b/ps5/ps5.css
@@ -136,7 +136,7 @@
 }
 
 .custom .button.pressed {
-    background: url(abxy.png);
+    background: url(abxy2.png);
     height: 211px;
     width: 211px;
     top: 260px;
